Feature/hmac jan 20 2023 (#8)
* remove coupling of hmac in token creation

* fix typo in openapi

* add a rest endpoint for creating a hmackey

* added create hmackey endpoint

* update yaml

* add hmac clients, hmac service updates, update permitpath

* add sealed secret

* update postgres db

* remove secret envs

* remove app

* change db to jwt

* chage log to info

* externalize hmackey creation in a service file

---------
